--- a/src/components/PokeList.css
+++ b/src/components/PokeList.css
@@ -2,3 +2,9 @@
     width: 600px;
     margin: auto;
 }
+
+.poke-list .btn-load-more {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+}
