--- a/src/components/PokeListItem.css
+++ b/src/components/PokeListItem.css
@@ -8,13 +8,15 @@
         0px 4px 9px 0 rgba(0,0,0,.1), 
         0px 0px 20px 0 rgba(0,0,0,.05);
     position: relative;
+    background-color: rgba(255, 255, 255, .5);
 }
 
 .poke-list-item .poke-img {
-    background: #f5f5f5;
+    background: #f5f5f5cc;
     border-radius: 50%;
     margin-right: 30px;
     padding: 10px;
+    box-shadow: 0 0 12px 0 rgba(0,0,0,.15);
 }
 
 .poke-list-item .poke-info {
