--- a/src/pages/PokemonDetails.css
+++ b/src/pages/PokemonDetails.css
@@ -5,24 +5,45 @@
 
 .pokemon-details .poke-img {
     display: inline-block;
-    background: #f5f5f5;
+    background: #f5f5f5ad;
     border-radius: 50%;
-    padding: 10px;
+    padding: 30px;
     margin-bottom: 15px;
+    box-shadow: 0 0 20px 0 rgba(0,0,0,0.15);
 }
 
 .pokemon-details .poke-img img {
-    height: 105px;
-    width: 105px;
+    height: 130px;
+    width: 130px;
 }
 
 .pokemon-details .poke-name {
     font-size: 23px;
     font-weight: 700;
     letter-spacing: 1px;
+    text-shadow: 0 0 12px rgba(0,0,0,0.1);
 }
 
 .pokemon-details  
 .poke-name::first-letter {
     text-transform: uppercase;
+}
+
+.pokemon-details .details {
+    box-shadow: 0 0 12px rgba(0,0,0,.3);
+    border-radius: 10px;
+    text-align: left;
+    padding: 12px 20px;
+    background-color: rgba(255,255,255,.15);
+}
+
+.pokemon-details .badge {
+    font-size: 13px;
+}
+
+.pokemon-details .details > p {
+    margin: 10px 0;
+    font-weight: 500;
+    font-size: 18px;
+    text-shadow: 0 0 15px rgba(0,0,0,.2);
 }
